minor fix to view.js and minor styling update

--- a/index.html
+++ b/index.html
@@ -27,29 +27,29 @@
   <body>
   <div class="wrapper">
     <div class="row">
-      <header class="mainHeader large-12 columns">Main Header Image</header>
+      <header class="mainHeader large-12 columns">MAIN HEADER IMAGE</header>
     </div>
 
     <div class="row">
-      <aside id="left" class="sideBarAd large-1 columns">IMAGE</aside>
+      <aside id="left" class="sideBarAd large-1 columns">SIDEBAR IMAGE</aside>
 
       <section class="large-10 columns">
 
        <div class="row">
-        <h1 class="siteHeader large-12 columns">This is a Movie Site. HeHey!</h1>
+        <h1 class="siteHeader large-12 columns">This is a Movie Site</h1>
         <button class="showCreate large-12 columns" name="addPost">Add Movie</button>
         <form id="createPost" action="">
           <p><input type="text" name="newTitle" value="" placeholder="Title"></p>
           <p><input type="text" name="newImg" value="" placeholder="Image Url"></p>
           <p><textarea name="newContent" placeholder="Content"></textarea></p>
-          <p><input type="text" name="newAuthor" value="" placeholder="Author"></p>
+          <p><input type="text" name="newDirector" value="" placeholder="Director"></p>
           <p><button class="createPost" type="submit" name="submit">Create New Movie</button></p>
         </form>
        </div>
 
       </section>
 
-      <aside id="right" class="sideBarAd large-1 columns">IMAGE</aside>
+      <aside id="right" class="sideBarAd large-1 columns">SIDEBAR IMAGE</aside>
     </div>
 
   </div>
