--- a/index.html
+++ b/index.html
@@ -26,17 +26,15 @@
   </head>
   <body>
   <div class="wrapper">
-    <div class="row">
-      <header class="mainHeader large-12 columns">MAIN HEADER IMAGE</header>
-    </div>
+    <!-- <div class="mainHeaderContainer row">
+      <header class="mainHeader large-12 columns">MOVIE SITE</header>
+    </div> -->
 
     <div class="row">
-      <aside id="left" class="sideBarAd large-1 columns">SIDEBAR IMAGE</aside>
+      <div class="mainHeaderContainer row">
+        <header class="mainHeader large-12 columns">MOVIE SITE</header>
 
-      <section class="large-10 columns">
-
-       <div class="row">
-        <h1 class="siteHeader large-12 columns">This is a Movie Site</h1>
+      <section class="large-12 columns">
         <button class="showCreate large-12 columns" name="addPost">Add Movie</button>
         <form id="createPost" action="">
           <p><input type="text" name="newTitle" value="" placeholder="Title"></p>
@@ -48,8 +46,6 @@
        </div>
 
       </section>
-
-      <aside id="right" class="sideBarAd large-1 columns">SIDEBAR IMAGE</aside>
     </div>
 
   </div>
